--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -84,7 +84,11 @@ import ArrowLeft from "@astropub/icons/ArrowLeft";
           <p>&nbsp;</p>
           <div>
             <button class="rounded-md bg-cyan-600 px-4 py-1">
-              <a href="/" target="_blank" rel="noopener">
+              <a
+                href="https://geandev.contest.codeforces.com/"
+                target="_blank"
+                rel="noopener"
+              >
                 <p class="text-white">รู้เรื่อง</p>
               </a>
             </button>
