--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -108,7 +108,7 @@ import ArrowLeft from "@astropub/icons/ArrowLeft";
             ><ArrowLeft
               width={30}
               fill="orange"
-              class="pl-1"
+              class="pl-1 animate-bounce-horizontal"
               stroke-width="30"
             /></a
           >
