--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,10 @@ import ArrowLeft from "@astropub/icons/ArrowLeft";
               ><a
                 href="https://www.timeanddate.com/worldclock/fixedtime.html?msg=Pre+TOI19+by+Gean+Dev&iso=20230507T19&p1=1049&ah=3"
                 target="_blank"
-                rel="noopener">วันอาทิตย์นี้ เวลา 19:00-22:00 น.</a
+                rel="noopener"
+                ><span class="line-through">วันอาทิตย์นี้</span><span
+                  class="text-blue-500">พรุ่งนี้</span
+                > เวลา 19:00-22:00 น.</a
               ></span
             >
             <span><a href="#about">😱</a></span>
