--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,10 +30,8 @@ import ArrowLeft from "@astropub/icons/ArrowLeft";
                 href="https://www.timeanddate.com/worldclock/fixedtime.html?msg=Pre+TOI19+by+Gean+Dev&iso=20230507T19&p1=1049&ah=3"
                 target="_blank"
                 rel="noopener"
-                ><span class="line-through">วันอาทิตย์นี้</span><span
-                  class="text-blue-500">พรุ่งนี้</span
-                > เวลา 19:00-22:00 น.</a
-              ></span
+                ><span class="line-through">วันอาทิตย์นี้ เวลา 19:00-22:00 น.</a
+              ><span class="text-blue-400"><br />อีก 1 ชั่วโมง</span></span
             >
             <span><a href="#about">😱</a></span>
           </p>
