--- a/src/pages/poster.astro
+++ b/src/pages/poster.astro
@@ -9,36 +9,37 @@ import Layout from "../layouts/Layout.astro";
       class="text-white mx-auto flex aspect-square w-[512px] h-[512px] flex-col items-center justify-center gap-4 border border-yellow-400 p-4"
     >
       <div>
-        <div class="h-full flex justify-center items-center flex-col">
-          <h1 class="text-4xl font-bold">
-            Pre TOI19 by <span class="text-orange-500"
+        <div class="h-full flex justify-center items-center flex-col text-center">
+        <h1 class="text-5xl font-bold">
+          Pre TOI19 by <span class="text-orange-500"
+            ><a
+              href="https://github.com/gean-dev"
+              target="_blank"
+              rel="noopener">Gean Dev</a
+            ></span
+          >
+        </h1>
+        <h2 class="text-3xl line-through pt-4">
+          Admin <span class="text-red-500"
+            ><a href="https://otog.cf" target="_blank" rel="noopener">OTOG©</a
+            ></span
+          >
+        </h2>
+        <div class="text-2xl pt-3">
+          <p>
+            จัดขึ้นใน
+            <span
               ><a
-                href="https://github.com/gean-dev"
+                href="https://www.timeanddate.com/worldclock/fixedtime.html?msg=Pre+TOI19+by+Gean+Dev&iso=20230507T19&p1=1049&ah=3"
                 target="_blank"
-                rel="noopener">Gean Dev</a
-              ></span
+                rel="noopener"
+                ><span class="line-through">วันอาทิตย์นี้ เวลา 19:00-22:00 น.</a
+              ><span class="text-blue-400"><br /> อีก 1 ชั่วโมง</span></span
             >
-          </h1>
-          <h2 class="text-2xl line-through pt-4">
-            Admin <span class="text-red-500"
-              ><a href="https://otog.cf" target="_blank" rel="noopener">OTOG©</a
-              ></span
-            >
-          </h2>
-          <div class="text-2xl pt-3">
-            <p>
-              จัดขึ้นใน
-              <span
-                ><a
-                  href="https://www.timeanddate.com/worldclock/fixedtime.html?msg=Pre+TOI19+by+Gean+Dev&iso=20230507T19&p1=1049&ah=3"
-                  target="_blank"
-                  rel="noopener">วันอาทิตย์นี้ เวลา 19:00-22:00 น.</a
-                ></span
-              >
-              <span>😱</span>
-            </p>
-          </div>
+            <span><a href="#about">😱</a></span>
+          </p>
         </div>
+      </div>
       </div>
     </main>
   </section>
