--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ import ArrowLeft from "@astropub/icons/ArrowLeft";
                 href="https://www.timeanddate.com/worldclock/fixedtime.html?msg=Pre+TOI19+by+Gean+Dev&iso=20230507T19&p1=1049&ah=3"
                 target="_blank"
                 rel="noopener"
-                ><span class="line-through">วันอาทิตย์ที่ 7 พฤษภาคม 2564 เวลา 19:00-22:00 น. (GMt+7).</a
+                ><span class="line-through">วันอาทิตย์นี้ เวลา 19:00-22:00 น. (GMt+7).</a
               ><span class="text-blue-400"> ไปแล้ว</span></span
             >
             <span><a href="#about">😱</a></span>
@@ -43,7 +43,7 @@ import ArrowLeft from "@astropub/icons/ArrowLeft";
             rel="noopener"
           >
             <p class="text-white text-lg">
-              ดูอันดับการ<span class="line-through">เกียน</span>แข่งขัน
+              ดูอันดับการแข่งขัน
             </p>
           </a>
         </button>
