🔧 fix mobile rendering of ranking page

--- a/src/pages/ranking/index.astro
+++ b/src/pages/ranking/index.astro
@@ -4,15 +4,20 @@ import Scoreboard from "../../components/Scoreboard.svelte";
 ---
 
 <Layout title="Ranking - Gean Dev Pre TOI19">
-  <main class="w-full text-white bg-slate-800">
-    <div class="h-full" id="greet">
-      <div class="flex justify-center items-center flex-col text-center pt-20 text-6xl font-thin">
-        <span>Pre TOI1<span class="text-orange-500">9 Ranking</span></span>
+  <main class="w-full text-white">
+    <div class="min-h-screen flex flex-col text-center" id="greet">
+      <div class="mx-auto w-full flex-1 px-4">
+        <div class="flex justify-center items-center flex-col text-center pt-20 text-6xl font-thin">
+          <span>Pre TOI1<span class="text-orange-500">9 Ranking</span></span>
+        </div>
+        <div class="overflow-x-auto py-20">
+          <Scoreboard client:load></Scoreboard>
+        </div>
       </div>
-      <div class="flex justify-center items-center flex-col text-center py-20">
-				<div class="border rounded-lg overflow-hidden border-gray-500">
-					<Scoreboard client:load></Scoreboard>
-				</div>
+      <div class="mb-5">
+        <p class="text-xl">
+          Made with ❤️ by <a href="https://github.com/gean-dev">Gean Dev</a>
+        </p>
       </div>
     </div>
   </main>
