--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import "../styles/global.css"
 export interface Props {
   title: string;
 }
@@ -33,7 +34,7 @@ const { title } = Astro.props;
   }
   html {
     font-family: system-ui, sans-serif;
-    background-color: #f6f6f6;
+    /* background-color: #f6f6f6; */
   }
   code {
     font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
